[package]
name = "chaos"
version = "0.1.0"
authors = ["ddorn <diego.dorn@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = { version = "0.4.0-alpha0.6", features = [] }
rand = { version = "0.7.3", features = [] }
rand_xorshift = "0.2.0"
